upload bundles to maven repos