@@ -22,17 +22,20 @@ def mavenUrl = System.getProperty("maven.url")
 def mavenUser = System.getProperty("maven.user")
 def mavenPwd = System.getProperty("maven.password")
 
+task release {
+}
 
 subprojects {
 
-  version = 0.66
-  group = 'org.egripse'
-
   apply {
-    plugin 'maven-publish'
     plugin 'java'
     plugin 'groovy'
+    plugin 'maven-publish'
+    plugin 'com.jfrog.bintray'
   }
+
+  version = 0.66
+  group = 'org.egripse'
 
   repositories {
     mavenCentral()
@@ -79,7 +82,6 @@ subprojects {
     }
   }
 
-
   task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
     from sourceSets.main.allSource
@@ -87,18 +89,6 @@ subprojects {
 
   artifacts {
     archives sourcesJar
-  }
-
-  // Tests in package integration are only called in task integrationtest and tests in
-  // package reallife are called in task reallifetest
-  test {
-    exclude "**/integrationtest/**"
-  }
-
-  task integrationtest(type: Test) {
-    dependsOn project.tasks.publishToMavenLocal
-    include "**/integrationtest/**"
-    jvmArgs "-XX:MaxPermSize=128m"
   }
 
   dependencies {
@@ -142,7 +132,89 @@ allprojects {
   }
 }
 
+project (':eclipsebase') {
+  dependencies {
+    compile 'de.pdark:decentxml:1.3'
+    compile 'com.diffplug.gradle:goomph:3.17.1'
+  }
+
+  rootProject.tasks.release.dependsOn tasks.bintrayUpload
+
+
+}
+
+project (':eclipsefeature') {
+
+  dependencies {
+    compile project (":eclipsebase")
+  }
+
+  rootProject.tasks.release.dependsOn tasks.bintrayUpload
+}
+
+project (':eclipseheadless') {
+  dependencies {
+    compile project(':eclipsebase')
+  }
+
+  rootProject.tasks.release.dependsOn tasks.bintrayUpload
+}
+
+project (':eclipsemwe') {
+
+  repositories {
+    maven { url "http://fornax.itemis.de/nexus/content/repositories/eclipse-maven/" }
+  }
+
+  dependencies {
+    compile project(':eclipseplugin')
+    compile project(':eclipsebase')
+  }
+  rootProject.tasks.release.dependsOn tasks.bintrayUpload
+
+}
+
+project (':eclipseplugin') {
+  dependencies {
+    compile project (":eclipsebase")
+  }
+  rootProject.tasks.release.dependsOn tasks.bintrayUpload
+}
+
+project (':eclipsesurefire') {
+  dependencies {
+    compile project(':eclipseheadless')
+  }
+  rootProject.tasks.release.dependsOn tasks.bintrayUpload
+}
+
+project (':integrationtests') {
+
+  dependencies {
+    testCompile gradleTestKit()
+    testCompile project (":eclipsebase")
+    testCompile project (":eclipseplugin")
+    testCompile project (":eclipsefeature")
+    testCompile project (":eclipsemwe")
+  }
+
+
+  //package performance is used for extra performance test task
+  project.tasks.findByName('test').exclude '**/integrationtest/**'
+  tasks.create('integrationtest', Test) {
+    outputs.upToDateWhen {false}
+    dependsOn(rootProject.getTasksByName('publishToMavenLocal', true))
+    include '**/integrationtest/**'
+    group = JavaBasePlugin.VERIFICATION_GROUP
+    description = 'Runs the integration tests'
+    testLogging {
+      events "passed", "skipped", "failed"
+      exceptionFormat 'full'
+      showStackTraces = 'true'
+    }
+  }
+}
+
 println "Using repo url " + mavenUrl + " with user " + mavenUser + " and version " + version
 
-task release {
-}
+
